Update Supabase script source URL

--- a/manage-students.html
+++ b/manage-students.html
@@ -27,7 +27,7 @@ button{padding:10px 20px;background:#1e90ff;color:#fff;border:none;border-radius
 <h3>Student List</h3>
 <div id="list"></div>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script src="https://ofxrrgdhpkdimytdyjux.supabase.co"></script>
 <script src="supabase.js"></script>
 <script src="script.js"></script>
 
